--- a/style.css
+++ b/style.css
@@ -81,6 +81,9 @@ section .title::after {
   background: #fff;
   transform: translateX(-50%);
 }
+div#loom-companion-mv3 section {
+  padding: 0;
+}
 
 /* navbar styling */
 .navbar {
